--- a/index.html
+++ b/index.html
@@ -7,14 +7,37 @@
 <body>
   <div class="form-container">
     <h2>Login</h2>
-    <form action="#">
-      <input type="text" placeholder="Username" required>
+    <form action="#" onsubmit="return validateForm, validatePassword">
+      <input type="email" id="username" name="email" placeholder="Enter email" required>
       <br>
-      <input type="password" placeholder="Password" required>
+      <input type="password" id="password" name="password" placeholder="Enter password" required >
       <br>
       <br>
-      <input type="submit" value="Submit">
+      <input type="submit" value="Submit" >
     </form>
   </div>
+  <script>
+    function validateForm() {
+      var email = document.getElementById("email").value;
+      var emailRegex = /^[a-zA-Z0-9._-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,4}$/;
+  
+      if (!emailRegex.test(email)) {
+        alert("Email is invalid")
+      }
+
+      
+      alert("Submitted Successfully")
+      return true;
+    }
+    function validatePassword(){
+      var password = document.getElementById("password").value;
+      var passwordRegex = /^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[@$!%*?&]).{8,}$/;
+      
+      if (!passwordRegex.test(password)) {
+        alert("Password must be at least 8 characters long, alphanumeric, and include at least one special character");
+        return false;
+      }
+    }
+  </script>
 </body>
 </html>
